Fix ckeditor image alignment issue and Card container styling

--- a/public/css/dynamic_club.css
+++ b/public/css/dynamic_club.css
@@ -368,7 +368,7 @@ img {
 }
 
 .ecards .ecard {
-  min-width: 387px;
+  width: 20vw;
 }
 
 .ecards::-webkit-scrollbar {
